@@ -1,13 +1,13 @@
-# Release Notes for Apache Derby 10.15.0.0
+# Release Notes for Apache Derby 10.16.1.1
 
-These notes describe the difference between Apache Derby release 10.15.0.0 and the preceding release 10.14.2.0.
+These notes describe the difference between Apache Derby release 10.16.1.1 and the preceding release 10.15.2.0.
 
-- [Overview](file:///D:/workspace/goodstudio/derby/RELEASE-NOTES.html#Overview)
-- [New Features](file:///D:/workspace/goodstudio/derby/RELEASE-NOTES.html#New Features)
-- [Bug Fixes](file:///D:/workspace/goodstudio/derby/RELEASE-NOTES.html#Bug Fixes)
-- [Issues](file:///D:/workspace/goodstudio/derby/RELEASE-NOTES.html#Issues)
-- [Build Environment](file:///D:/workspace/goodstudio/derby/RELEASE-NOTES.html#Build Environment)
-- [Verifying Releases](file:///D:/workspace/goodstudio/derby/RELEASE-NOTES.html#Verifying Releases)
+- [Overview](#Overview)
+- [New Features](#New Features)
+- [Bug Fixes](#Bug Fixes)
+- [Issues](#Issues)
+- [Build Environment](#Build Environment)
+- [Verifying Releases](#Verifying Releases)
 
 ## Overview
 
@@ -20,103 +20,129 @@ Apache Derby is a pure Java relational database engine using standard SQL and JD
 - Network client JDBC drivers
 - Command line tools: ij (SQL scripting), dblook (schema dump) and sysinfo (system info)
 
-The 10.15 release family supports the following Java and JDBC versions:
+The 10.16 release family supports the following Java and JDBC versions:
 
-- Java SE 9 and higher with JDBC 4.2.
+- Java SE 17 and higher with JDBC 4.2.
 
 ## New Features
 
-This is a feature release. The following new feature was added:
+This is a feature release. The following significant change has been made:
 
-- **JPMS modularization** - Derby has been re-packaged as a set of JPMS modules. This introduced a new jar file, *derbyshared.jar*, required by all configurations. Module diagrams for Derby configurations can be found in the [javadoc](https://db.apache.org/derby/docs/10.15/publishedapi/index.html) for the 10.15 public API.
+- **SecurityManager deprecated** - Derby no longer supports the Java SecurityManager. This is because the Open JDK team deprecated the SecurityManager and marked it for removal. This deprecation happened under the aegis of [JEP 411](https://openjdk.java.net/jeps/411).
 
-New users should consult the [10.15 documentation](https://db.apache.org/derby/manuals/index.html#docs_10.15), especially the [Getting Started With Derby](https://db.apache.org/derby/docs/10.15/getstart/index.html) guide.
+New users should consult the [10.16 documentation](https://db.apache.org/derby/manuals/index.html#docs_10.16), especially the [Getting Started With Derby](https://db.apache.org/derby/docs/10.16/getstart/index.html) guide.
 
-Existing users who want to continue running Derby with a classpath  should read the extended release note for issue DERBY-6945 (see below).
-
-Existing users who want to run Derby with a module path should consult the module diagrams in the [javadoc](https://db.apache.org/derby/docs/10.15/publishedapi/index.html) for the 10.15 public API. Templates for wiring together a module path can be found in the *setEmbeddedCP*, *setNetworkServerCP*, and *setNetworkClientCP* scripts located in the bin directory of the release distributions, as described by the "Manually setting the CLASSPATH/MODULEPATH environment variables" topic in the [Getting Started With Derby](https://db.apache.org/derby/docs/10.15/getstart/index.html) guide.
+Existing users who want to run Derby with a SecurityManager must NOT upgrade to version 10.16. Instead, those users must continue to use older versions of Derby. Please see the [Derby download page](https://db.apache.org/derby/derby_downloads.html) in order to understand how Derby and Java versions correspond.
 
 ## Bug Fixes
 
-The following issues are addressed by Derby release 10.15.0.0. These  issues are not addressed in the preceding 10.14.2.0 release.
+The following issues are addressed by Derby release 10.16.1.1. These issues are not addressed in the preceding 10.15.2.0 release.
 
 | Issue Id                                                     | Description                                                  |
 | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| [DERBY-7020](https://issues.apache.org/jira/browse/DERBY-7020) | Fix release targets to account for modularization changes    |
-| [DERBY-7018](https://issues.apache.org/jira/browse/DERBY-7018) | Test the demo programs after the changes made by DERBY-6945  |
-| [DERBY-7016](https://issues.apache.org/jira/browse/DERBY-7016) | Adjust the set*CP scripts to include derbyshared.jar and to set a MODULEPATH variable as well |
-| [DERBY-6981](https://issues.apache.org/jira/browse/DERBY-6981) | "SQLSTATE: XJ001, SQLERRMC: java.lang.NullPointerExceptionXJ001.U" |
-| [DERBY-6980](https://issues.apache.org/jira/browse/DERBY-6980) | Documentation changes to accompany jigsaw-modularization of derby |
-| [DERBY-6973](https://issues.apache.org/jira/browse/DERBY-6973) | Provide SHA-512 checksums on future releases                 |
-| [DERBY-6945](https://issues.apache.org/jira/browse/DERBY-6945) | Re-package Derby as a collection of jigsaw modules           |
-| [DERBY-6856](https://issues.apache.org/jira/browse/DERBY-6856) | Make it possible to build Derby using JDK 9                  |
-| [DERBY-5543](https://issues.apache.org/jira/browse/DERBY-5543) | include debug info in derby builds uploaded to maven         |
+| [DERBY-7040](https://issues.apache.org/jira/browse/DERBY-7040) | Add dependency stanzas to maven poms                         |
+| [DERBY-7137](https://issues.apache.org/jira/browse/DERBY-7137) | Compile 10.16 into Java 17 byte code so that it won't run on earlier platforms |
+| [DERBY-7125](https://issues.apache.org/jira/browse/DERBY-7125) | Dead link in BUILDING.html                                   |
+| [DERBY-7031](https://issues.apache.org/jira/browse/DERBY-7031) | Errors running upgrade tests from 10.15.1.0 release candidate to 10.16 trunk |
+| [DERBY-7124](https://issues.apache.org/jira/browse/DERBY-7124) | Errors seen while running the junit-all target               |
+| [DERBY-7053](https://issues.apache.org/jira/browse/DERBY-7053) | Further top build.xml streamlining                           |
+| [DERBY-7050](https://issues.apache.org/jira/browse/DERBY-7050) | In build.xml of derby root there's a vestigial target (+ patch) |
+| [DERBY-7087](https://issues.apache.org/jira/browse/DERBY-7087) | Make it possible to build and run tests cleanly on Java 15   |
+| [DERBY-7110](https://issues.apache.org/jira/browse/DERBY-7110) | Make it possible to build and test Derby cleanly with OpenJDK 17 |
+| [DERBY-7126](https://issues.apache.org/jira/browse/DERBY-7126) | Make it possible to build and test Derby cleanly with OpenJDK 18 |
+| [DERBY-7088](https://issues.apache.org/jira/browse/DERBY-7088) | Make it possible to build and test Derby using JDK 16        |
+| [DERBY-7046](https://issues.apache.org/jira/browse/DERBY-7046) | NoClassDefFoundError on 'java -jar derbynet.jar'             |
+| [DERBY-7138](https://issues.apache.org/jira/browse/DERBY-7138) | Remove references to the Java Security Manager               |
+| [DERBY-7052](https://issues.apache.org/jira/browse/DERBY-7052) | Reordering and (mildly) reorganizing build.xml Ant targets around buildsource |
+| [DERBY-7057](https://issues.apache.org/jira/browse/DERBY-7057) | Unreferenced failing target in main build                    |
+| [DERBY-7038](https://issues.apache.org/jira/browse/DERBY-7038) | Upgrade ant version and re-write javadoc build targets to use improved <javadoc>task |
+| [DERBY-7041](https://issues.apache.org/jira/browse/DERBY-7041) | null pointer exception when creating view based on other views |
 
 ## Issues
 
-- [Note for DERBY-6945:  Modularize Derby, cleanly partitioning its packages across a small set of JPMS components. ](file:///D:/workspace/goodstudio/derby/RELEASE-NOTES.html#Note for DERBY-6945)
+- [Note for DERBY-7137: Derby 10.16 compiles into Java 17 byte code.](#Note for DERBY-7137)
+- [Note for DERBY-7138: As part of JEP 411, the Open JDK team deprecated the SecurityManager and marked it for future removal. In response, Derby release 10.16 removes support for the SecurityManager.](#Note for DERBY-7138)
 
-Compared with the previous release (10.14.2.0), Derby release  10.15.0.0 introduces the following new features and incompatibilities.  These merit your special attention.
+Compared with the previous release (10.15.2.0), Derby release 10.16.1.1 introduces the following new features and incompatibilities. These merit your special attention.
 
 ------
 
-### Note for DERBY-6945
+### Note for DERBY-7137
 
 #### Summary of Change
 
-Modularize Derby, cleanly partitioning its packages across a small set of JPMS components.
+Derby 10.16 compiles into Java 17 byte code.
 
 #### Symptoms Seen by Applications Affected by Change
 
-A new jar file (*derbyshared.jar*) has been added. All Derby configurations require it. In addition, the *derbytools.jar* library is now required when running the network server and/or when using Derby DataSources.
-
-More privileges must be granted to the Derby jar files when running under a Security Manager.
-
-Derby jar files can now be wired into a modulepath for use by module-aware applications.
-
-#### Incompatibilities with Previous Release
-
-Legacy applications may fail if their classpaths don't contain the required jar files. Code common to all Derby configurations has been isolated in the new *derbyshared.jar* file. DataSources have moved from *derbyclient.jar* and *derby.jar* into *derbytools.jar*
-
-Legacy applications which run under a Java SecurityManager may fail due to insufficient privilege grants.
+Derby 10.16 will not run on Java 16 or earlier JVMs.
 
 #### Rationale for Change
 
-Derby was divided into JPMS components for the following reasons:
-
-- **Footprint** - Modularization reduces Derby's footprint when running embedded on resource-constrained devices.
-- **Security** - Modularization lets Derby protect its code via package-level encapsulation.
+Derby 10.16 no longer supports the Java SecurityManager (see [DERBY-7138](https://issues.apache.org/jira/browse/DERBY-7138)) due to its deprecation by Java 17 (see [JEP 411](https://openjdk.java.net/jeps/411)). Java 17 and Derby 10.16 must not be used by applications which install a SecurityManager.
 
 #### Application Changes Required
 
-Consult the module diagrams for configurations described on the landing page of the [10.15 public API](https://db.apache.org/derby/docs/10.15/publishedapi/index.html). Then adjust your application's classpath as follows:
+Applications must not use the SecurityManager if they run with Derby 10.16 on Java 17 or later JVMs. Applications which need a SecurityManager must use earlier versions of Derby and the JVM. See the [Derby download page](https://db.apache.org/derby/derby_downloads.html) for the correspondence between Derby and JVM versions.
 
-- **Remote client** - When running remote client applications, make sure that the classpath includes *derbyshared.jar*. Remote applications which use Derby DataSources should also include *derbytools.jar*.
-- **Embedded engine** - When running the embedded engine, make sure that the classpath includes *derbyshared.jar*. Embedded applications which use Derby DataSources should also include *derbytools.jar*.
-- **Network server** - When running the network server, make sure that the classpath includes *derbyshared.jar* and *derbytools.jar*.
-- **Tools** - When running Derby tools like *ij*, *dblook*, and *sysinfo*, make sure that the classpath includes *derbyshared.jar*.
+------
 
-Java security policy files must grant additional privileges to Derby jar files. For more information, see the "Configuring Java Security" topic in the [*Derby Security Guide*](https://db.apache.org/derby/docs/10.15/security/index.html) and consult the following template policy files in the *demo/templates* directory of the bin distribution:
+### Note for DERBY-7138
 
-- **clientTemplate.policy** - Privileges needed by remote client applications.
-- **engineTemplate.policy** - Privileges needed by applications which embed the Derby engine.
-- **serverTemplate.policy** - Privileges needed when running the network server.
-- **toolsTemplate.policy** - Privileges needed when running Derby tools.
+#### Summary of Change
+
+As part of JEP 411, the Open JDK team deprecated the SecurityManager and marked it for future removal. In response, Derby release 10.16 removes support for the SecurityManager.
+
+#### Symptoms Seen by Applications Affected by Change
+
+Previous Derby releases let database administrators install a Java SecurityManager. This, in turn, let applications customize access to security-sensitive objects such as files, network sockets, system properties, and class loaders. In previous Derby releases, the Derby network server installed a SecurityManager with default permissions if the administrator forgot to provide a customized security policy.
+
+Recently, Open JDK 17 deprecated the SecurityManager and marked it for future removal. Open JDK 17 also began writing warnings to the console when applications called SecurityManager-related methods.
+
+Open JDK 18 goes even further. Open JDK 18 forces users to set *-Djava.security.manager=allow* when booting an application which installs a SecurityManager. Furthermore, the meaning of that property has changed since Open JDK 11. In Open JDK 11, *java.security.manager* was the name of a user-written SecurityManager class. The property is now a directive which is required for applications which want to run a SecurityManager.
+
+#### Incompatibilities with Previous Release
+
+Derby 10.16 removes support for the deprecated SecurityManager. The Derby 10.16 network server no longer installs a SecurityManager with a default policy file. Derby 10.16 will fail to run under the SecurityManager.
+
+Applications which need to run under a SecurityManager should use an earlier version of Derby, such as 10.15. Those applications will see warnings and will need to set *-Djava.security.manager=allow* when running on JVMs from Open JDK 17 upward.
+
+#### Rationale for Change
+
+The Open JDK team has deprecated the SecurityManager because it is too expensive to maintain. The Open JDK team feels that files and sockets can be protected better by running applications inside operating system containers.
+
+#### Application Changes Required
+
+Derby-powered applications should not rely on the SecurityManager and should no longer expect the Derby network server to install a SecurityManager with a default policy. Instead, applications should remove their own support for the SecurityManager.
+
+The following table suggests defenses against several threats. Some threats have no defenses now. Applications must wait until the Open JDK team builds or recommends replacement defenses for the protections deprecated by JEP 411.
+
+| Operation                             | Threat                                   | Mitigation                           |
+| ------------------------------------- | ---------------------------------------- | ------------------------------------ |
+| File access                           | PrivacyData corruptionLoading of malware | Containerize application             |
+| Network access                        | Loading of malware                       | Containerize application             |
+| Access to Derby internals             | PrivacyData corruptionLoading of malware | Run Derby from the module path       |
+| Engine and server shutdown            | Denial of service                        | Use authorization to restrict logins |
+| Creation of class loaders             | Loading of malware                       | -                                    |
+| De-registration of JDBC driver        | Denial of service                        | -                                    |
+| Reading and setting system properties | PrivacyDenial of service                 | -                                    |
+| JMX monitoring of engine and server   | Harmless                                 | -                                    |
+| Re-loading of security policy         | N/A                                      | -                                    |
 
 ## Build Environment
 
-Derby release 10.15.0.0 was built using the following environment:
+Derby release 10.16.1.1 was built using the following environment:
 
-- **Branch** - Source code came from the 10.15 branch.
-- **Machine** - Mac OSX 10.11.6.
-- **Ant** - Apache Ant(TM) version 1.10.2 compiled on February 3 2018.
-- **Compiler** - All classes were compiled by the javac from OpenJDK 64-Bit Server VM 18.9 (build 11+28, mixed mode).
+- **Branch** - Source code came from the 10.16 branch.
+- **Machine** - Mac OSX 11.2.3.
+- **Ant** - Apache Ant(TM) version 1.10.6 compiled on May 2 2019.
+- **Compiler** - All classes were compiled by the javac from OpenJDK 64-Bit Server VM (build 17+35-2724, mixed mode, sharing).
 
 ## Verifying Releases
 
-It is essential that you verify the integrity of the downloaded files using the PGP and SHA-512 signatures.  SHA-512 verification ensures the file was not corrupted during the download process.  PGP verification ensures that the file came from a certain person.
+It is essential that you verify the integrity of the downloaded files using the PGP and SHA-512 signatures. SHA-512 verification ensures the file was not corrupted during the download process. PGP verification ensures that the file came from a certain person.
 
-The PGP signatures can be verified using [PGP](https://www.pgpi.org/) or [GPG](https://www.gnupg.org/). First download the Apache Derby [KEYS](https://dist.apache.org/repos/dist/release/db/derby/KEYS) as well as the `asc` signature file for the particular distribution. It is important that you get these files from the ultimate trusted source - the main ASF distribution site, rather than from a mirror. Then verify the signatures using ...
+The PGP signatures can be verified using [PGP](https://www.pgpi.org/) or [GPG](https://www.gnupg.org/). First download the Apache Derby [KEYS](https://www.apache.org/dist/db/derby/KEYS) as well as the `asc` signature file for the particular distribution. It is important that you get these files from the ultimate trusted source - the main ASF distribution site, rather than from a mirror. Then verify the signatures using ...
 
 ```
 % pgpk -a KEYS
